# wrk-wrk

./: Cargo.toml  README.md  Trunk.toml  index.html  styles.css  tailwind.config.js
.cargo/: config.toml
assets/: assets.md
shared/: Cargo.toml
shared/src/data/: mod.rs  task.rs
src/: app.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: add_task.rs  get_tasks.rs  mod.rs
src-tauri/src/database/: mod.rs  task.rs
src/components/: day.rs  footer.rs  header.rs  mod.rs  nav_point.rs  not_found.rs  radio_button.rs  tab.rs  tab_list.rs  tag.rs  task_list.rs  task_search.rs  tasks.rs  week.rs
src/icons/: arrow_left.rs  arrows_clockwise.rs  bulldozer.rs  calendar_dot.rs  calendar_dots.rs  clipboard_text.rs  floppy_disk.rs  icons.md  mod.rs  moon_stars.rs  play_circle.rs  plus_circle.rs  rocket_launch.rs  x_circle.rs
src/pages/: add_task.rs  content.rs  current.rs  day.rs  footer.rs  header.rs  mod.rs  not_found.rs  tasks.rs  week.rs
