[package]
name = "wrk-wrk"
version = "0.1.0"
edition = "2021"

[lib]
name = "wrk_wrk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
anyhow = "1.0.95"
futures-core = "0.3.31"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "chrono"] }
tauri = { version = "2.2.0", features = [] }
tauri-plugin-opener = "2.2.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
shared = { path = "../shared"}
