[package]
name = "wrk-wrk"
version = "0.1.0"
edition = "2024"

[lib]
name = "wrk_wrk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.100"
futures-core = "0.3.31"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
tauri = { version = "2.9.2", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shared = { path = "../shared"}
